--- a/index.html
+++ b/index.html
@@ -56,7 +56,23 @@
         file types to be securely stored and shared.</p>
     </div>
   </div>
-
+  <div class="stay-produktiv flexbox-center">
+    <div><picture>
+      <source srcset="./images/illustration-stay-productive.png" media="(min-width: 600px)">
+      <img src="./images/illustration-stay-productive.png" alt="MDN">
+    </picture></div>
+    <div class="stay-produktiv_text">
+      <h1>Stay productive, wherever you are</h1>
+      <p>Never let location be an issue when accessing your files. Fylo has you covered for all of your file 
+        storage needs.</p>
+      <p>Securely share files and folders with friends, family and colleagues for live collaboration. No email 
+        attachments required.</p>
+        <div class="stay-produktive_link">
+          <a href="">See how Fylo works</a>
+          <img src="./images/icon-arrow.svg" alt="arrow">
+        </div>
+    </div>
+  </div>
 
 
 
@@ -77,15 +93,7 @@
 
   
 
-  Stay productive, wherever you are
 
-  Never let location be an issue when accessing your files. Fylo has you covered for all of your file 
-  storage needs.
-
-  Securely share files and folders with friends, family and colleagues for live collaboration. No email 
-  attachments required.
-
-  See how Fylo works
 
   Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
   become a well-oiled collaboration machine.
