--- a/index.html
+++ b/index.html
@@ -74,44 +74,53 @@
     </div>
   </div>
 
+  <div class="testimonial-block flexbox-center">
+    <div class="testimonial flexbox-center">
+      <div>
+        <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+          become a well-oiled collaboration machine.</p>
+      </div>
+      <div class="testimonial-person flexbox-center">
+        <img src="./images/profile-1.jpg" alt="Satish Patel">
+        <div>
+          <h3>Satish Patel</h3>
+          <p>Founder & CEO, Huddle</p>
+        </div>
+      </div>
+    </div class="testimonial-person flexbox-center">
+    <div class="testimonial flexbox-center">
+      <div>
+        <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+          become a well-oiled collaboration machine.</p>
+      </div>
+      <div class="testimonial-person flexbox-center">
+        <img src="./images/profile-2.jpg" alt="Bruce McKenzie">
+        <div>
+          <h3>Bruce McKenzie</h3>
+          <p>Founder & CEO, Huddle</p>
+        </div>
+      </div>
+    </div>
+    <div class="testimonial flexbox-center">
+      <div>
+        <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+          become a well-oiled collaboration machine.</p>
+      </div>
+      <div class="testimonial-person flexbox-center">
+        <img src="./images/profile-3.jpg" alt="Iva Boyd">
+        <div>
+          <h3>Iva Boyd</h3>
+          <p>Founder & CEO, Huddle</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
 
 
 
   
-
-
-
- 
-
- 
-
-  
-
-  
-
-  
-
-  
-
-
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
-
-  Satish Patel
-  Founder & CEO, Huddle
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
-
-  Bruce McKenzie
-  Founder & CEO, Huddle
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
-
-  Iva Boyd
-  Founder & CEO, Huddle
 
   Get early access today
 
