--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
 
 
-  
+  <!--
 
   Get early access today
 
@@ -128,23 +128,50 @@
   questions, our support team would be happy to help you.
 
   Get Started For Free
+  -->
 
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-  dolore magna aliqua
+<footer class="flexbox-center">
+  <div class="footer-block">
+    <img src="./images/logo.svg" alt="logo">
+    <div class="footer-content flexbox-center">
+      <div> 
+        <div class="flexbox-center">
+          <img src="./images/icon-location.svg" alt="location">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
+            dolore magna aliqua</p>
+        </div>
+      </div>
+      <div>
+        <div class="flexbox-center">
+          <img src="./images/icon-phone.svg" alt="phone">
+          <p>+1-543-123-4567</p>
+        </div>
+        <div>
+          <img src="./images/icon-email.svg" alt="email">
+          <p>example@fylo.com</p>
+        </div>
+      </div>
+      <div>
+        <ul>
+          <li>About Us</li>
+          <li>Jobs</li>
+          <li>Press</li>
+          <li>Blog</li>
+        </ul>
+      </div>
+      <div>
+        <ul>
+          <li>Contact Us</li>
+          <li>Terms</li>
+          <li>Privacy</li>
+        </ul>
+      </div>
+      <div>
+        //social media icons
+      </div>
+    </div>
+  </div>
+</footer>
 
-  +1-543-123-4567
-  example@fylo.com
-
-  About Us
-  Jobs
-  Press
-  Blog
-
-  Contact Us
-  Terms
-  Privacy
-
-  <footer>
-  </footer>
 </body>
 </html>
