--- a/index.html
+++ b/index.html
@@ -132,26 +132,27 @@
 
 <footer class="flexbox-center">
   <div class="footer-block">
-    <img src="./images/logo.svg" alt="logo">
+    <img id="footer-logo" src="./images/logo.svg" alt="logo">
     <div class="footer-content flexbox-center">
-      <div> 
+      <div  class="content-container"> 
         <div class="flexbox-center">
           <img src="./images/icon-location.svg" alt="location">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
             dolore magna aliqua</p>
         </div>
       </div>
-      <div>
+      <div id="wrap" class="content-container flexbox-center" >
         <div class="flexbox-center">
           <img src="./images/icon-phone.svg" alt="phone">
           <p>+1-543-123-4567</p>
         </div>
-        <div>
+        <div class="flexbox-center">
           <img src="./images/icon-email.svg" alt="email">
           <p>example@fylo.com</p>
         </div>
       </div>
-      <div>
+      <div class="content-container flexbox-center">
+        <div>
         <ul>
           <li>About Us</li>
           <li>Jobs</li>
@@ -166,8 +167,9 @@
           <li>Privacy</li>
         </ul>
       </div>
-      <div>
-        //social media icons
+      </div>
+      <div class="content-container">
+        <p>social media icons</p>
       </div>
     </div>
   </div>
